# goc-mpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
examples/: graph_assignment.py  graph_needle_threading.py  graph_short_path.py  main.py  new_drake_env_test.py  one_2d_point_goc_mpc_example.py  one_3d_point_goc_mpc_example.py  one_point_goc_mpc_example.py  pointmass_example.py  test.py  two_2d_point_goc_mpc_example.py  two_point_goc_mpc_example.py  variable_constraint_test.py  visualize_pose_spline.py  visualize_spline.py
src/ext/: backup.txt  configuration_spline.cpp  configuration_spline.hpp  cubic_spline_leap_cost.cpp  goc_mpc.cpp  graphs.cpp  graphs.hpp  splines.cpp  splines.hpp  utils.cpp  utils.hpp
src/ext/goc_mpc/: goc_mpc.cpp  graph_of_constraints.cpp  graph_of_constraints.hpp  graph_short_path_mpc.cpp  graph_short_path_mpc.hpp  graph_timing_mpc.cpp  graph_timing_mpc.hpp  graph_waypoint_mpc.cpp  graph_waypoint_mpc.hpp
src/ext/sec_mpc/: timing_mpc.cpp  timing_mpc_problem.cpp  timing_mpc_problem.hpp  waypoint_mpc.cpp  waypoint_mpc.hpp
src/goc_mpc/: __init__.py  goc_mpc.py  graphs.py  sec_mpc.py  simple_drake_env.py  splines.py
src/goc_mpc/descriptions/: cube_3dof.urdf  free_body_6dof.urdf  point_mass_3dof.urdf
src/goc_mpc/systems/: __init__.py  one_2d_point_mass_env.py  one_point_mass_env.py  two_2d_point_mass_env.py  two_point_mass_env.py  ur5e_diff_ik_env.py
src/goc_mpc/utils/: mesh_cat_mirror.py
src/goc_mpc_cpp/: example.c  goc_mpc.cpp  graphs.cpp  graphs.hpp  splines.cpp
src/goc_mpc_cpp/goc_mpc/: goc_mpc.cpp  graph_ordering_mpc_problem.cpp  graph_ordering_mpc_problem.hpp  graph_short_path_mpc.hpp  graph_timing_mpc.cpp  graph_timing_mpc.hpp  graph_waypoint_mpc.cpp  graph_waypoint_mpc.hpp  graph_waypoint_mpc_problem.cpp  graph_waypoint_mpc_problem.hpp
src/goc_mpc_cpp/sec_mpc/: sec_mpc.cpp  timing_mpc.cpp  timing_mpc.hpp  timing_mpc_problem.cpp  timing_mpc_problem.hpp
