[project]
name = "goc-mpc"
version = "0.9.1"
description = ""
authors = [
    {name = "Tassos Manganaris",email = "tassos.manganaris@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "drake (>=1.43.0,<2)",
    "mujoco (>=3.3.5,<4.0.0)",
    "imageio[ffmpeg] (>=2.33.0,<3.0.0)",
    "meshcat (>=0.3.2,<0.4.0)"
]

[build-system]
requires = ["py-build-cmake~=0.4.3"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
name = "goc_mpc"
directory = "src"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "cmake", "src/ext"]

[tool.py-build-cmake.cmake]
minimum_version = "3.17"
build_type = "RelWithDebInfo"
source_path = "."
build_args = ["-j"]
install_components = ["python_modules"]

[tool.poetry.group.dev.dependencies]
py-build-cmake = "^0.4.3"
pybind11-stubgen = "^2.5.4"

